--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
     </div>
 
     <!-- Scripts -->
+    <script src="js/news_data.js"></script>
     <script src="js/stock_data.js"></script>
     <script src="js/data-service.js"></script>
     <script src="js/analysis.js"></script>
