--- a/index.html
+++ b/index.html
@@ -125,34 +125,7 @@
         </div>
     </div>
 
-    <!-- Analysis Modal -->
-    <div class="modal-overlay" id="analysis-modal">
-        <div class="modal-content news-modal">
-            <div class="modal-header">
-                <div class="modal-stock-info">
-                    <div class="modal-badge" id="modal-sentiment-badge">STRONG BUY</div>
-                    <h2 id="modal-title">Laba BBCA Naik Significance</h2>
-                </div>
-                <button class="close-btn" onclick="closeModal()"><i class='bx bx-x'></i></button>
-            </div>
-
-            <div class="modal-body">
-                <div class="modal-main-col">
-                    <p class="modal-date" id="modal-date">Updated: Today, 14:00</p>
-                    <p class="modal-summary" id="modal-summary">Full summary text...</p>
-
-                    <div class="ai-insight-box">
-                        <h3><i class='bx bx-brain'></i> AI Impact Analysis</h3>
-                        <p id="modal-reason">This news is positive because...</p>
-                    </div>
-
-                    <a href="#" id="modal-source-link" target="_blank" class="read-more-btn">
-                        Read Full Article Source <i class='bx bx-link-external'></i>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
+    <!-- Analysis Modal Removed -->
 
     <!-- Scripts -->
     <script src="js/news_data.js"></script>
