--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IndoMarket News AI | Real-time Analysis</title>
+
+    <!-- SEO Meta Tags -->
+    <title>IndoMarket AI | Robot Trading Saham & Berita IHSG Realtime</title>
+    <meta name="description"
+        content="Aplikasi Robot Trading Indonesia dengan AI canggih. Analisis saham realtime, prediksi IHSG, dan berita pasar saham terlengkap. Dapatkan sinyal Buy/Sell akurat sekarang.">
+    <meta name="keywords"
+        content="saham indonesia, robot trading saham, ai saham, berita ihsg, analisis teknikal saham, sinyal saham, belajar saham, idx composite">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="IndoMarket AI">
+
+    <!-- Open Graph / Social Media -->
+    <meta property="og:title" content="IndoMarket AI | Robot Trading & Berita Saham Indonesia">
+    <meta property="og:description"
+        content="Analisis saham otomatis dengan AI. Cek sinyal Buy/Sell dan berita pasar IHSG terbaru secara realtime.">
+    <meta property="og:type" content="website">
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
