--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         content="saham indonesia, robot trading saham, ai saham, berita ihsg, analisis teknikal saham, sinyal saham, belajar saham, idx composite">
     <meta name="robots" content="index, follow">
     <meta name="author" content="IndoMarket AI">
+    <meta name="google-site-verification" content="3piWim3_lm37dBqZNdAOdozef6y4kttavQzaG1fwDSY" />
 
     <!-- Open Graph / Social Media -->
     <meta property="og:title" content="IndoMarket AI | Robot Trading & Berita Saham Indonesia">
